--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "jasonphd/themes/hugo-discaptive"]
 	path = jasonphd/themes/hugo-discaptive
 	url = https://github.com/discaptive/hugo-discaptive.git
+[submodule "jasonphd/themes/blowfish"]
+	path = jasonphd/themes/blowfish
+	url = https://github.com/nunocoracao/blowfish.git
+	branch = main
